# controller-rs

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.otel  LICENSE  Makefile  README.md  Tiltfile  docker-compose.yaml  justfile  local-service.yaml  release.toml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: automerge.yml  ci.yml  rustfmt.yml
charts/doc-controller/: Chart.yaml  test.yaml  values.yaml
charts/doc-controller/templates/: _helpers.tpl  deployment.yaml  networkpolicy.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
src/: controller.rs  crdgen.rs  fixtures.rs  kube.rs  lib.rs  main.rs  manager.rs  metrics.rs  state.rs  telemetry.rs
yaml/: access.yaml  crd-baz.yaml  crd-qux.yaml  crd.yaml  deployment.yaml  foo-crd.yaml  instance-bad.yaml  instance-good.yaml  instance-illegal.yaml  instance-lorem.yaml  instance-samuel.yaml  local-test-service.yaml
