[package]
name = "controller"
version = "0.16.0"
authors = ["clux <sszynrae@gmail.com>"]
edition = "2021"
default-run = "controller"
license = "Apache-2.0"
publish = false

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = []
telemetry = ["opentelemetry-otlp"]

[dependencies]
actix-web = "4.10.2"
futures = "0.3.31"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.25"
chrono = { version = "0.4.40", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.28.0"
opentelemetry = { version = "0.27.1", features = ["trace"] }
opentelemetry-otlp = { version = "0.27.0", optional = true }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
thiserror = "2.0.12"
anyhow = "1.0.98"
prometheus-client = "0.23.1"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "1"
hyper = "1"
tower-test = "0.4.0"

[dependencies.kube]
features = ["runtime", "client", "derive", "openssl-tls"]
default-features = false
version = "0.99.0"

# testing new releases - ignore
# git = "https://github.com/kube-rs/kube.git"
# branch = "main"
#rev = "19b90ad3a4dbc83e1dd742847c7707333259b1bb"
#path = "../kube/kube"
