[package]
name = "controller"
version = "0.16.0"
authors = ["clux <sszynrae@gmail.com>"]
edition = "2024"
default-run = "controller"
license = "Apache-2.0"
publish = false

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = []
telemetry = ["opentelemetry-otlp"]

[dependencies]
actix-web = "4.11.0"
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
#k8s-openapi = { version = "0.25.0", features = ["latest"] }
k8s-openapi = { git = "https://github.com/Arnavion/k8s-openapi.git", rev = "e9a9eaf", features=["latest"] }
schemars = "1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.25"
chrono = { version = "0.4.41", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-opentelemetry = "0.31.0"
opentelemetry = { version = "0.30", features = ["trace"] }
opentelemetry-otlp = { version = "0.30", optional = true, default-features = false, features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
thiserror = "2.0.16"
anyhow = "1.0.99"
prometheus-client = "0.24.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "1"
hyper = "1"
tower-test = "0.4.0"

[dependencies.kube]
features = ["runtime", "client", "derive"]
# version = "1.1.0"

# testing new releases - ignore
git = "https://github.com/kube-rs/kube.git"
# branch = "main"
rev = "06e843bf026d0838dca159433e8af8268b6cc0bf"
# path = "../kube/kube"
