[package]
name = "controller"
version = "0.16.0"
authors = ["clux <sszynrae@gmail.com>"]
edition = "2024"
default-run = "controller"
license = "Apache-2.0"
publish = false

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "controller"
path = "src/lib.rs"

[features]
default = []
telemetry = ["opentelemetry-otlp"]

[dependencies]
actix-web = "4.12.1"
futures = "0.3.32"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
k8s-openapi = { version = "0.27.0", features = ["latest"] }
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.25"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-opentelemetry = "0.32.1"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", optional = true, default-features = false, features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
thiserror = "2.0.18"
anyhow = "1.0.101"
prometheus-client = "0.24.0"
jiff = "0.2.20"

[dev-dependencies]
assert-json-diff = "2.0.2"
envtest = "0.1.2"
http = "1"
hyper = "1"
tower-test = "0.4.0"

[dependencies.kube]
features = ["runtime", "client", "derive"]
version = "3"

# testing new releases - ignore
# git = "https://github.com/kube-rs/kube.git"
# branch = "main"
# rev = "896ba6798ddac323dd464cc51938a6c818276f65"
# path = "../kube/kube"
